tests/error_corpus/validation_errors/not_implemented/E514_missing_language_code.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Child
@ID:	|corpus|CHI|||||Child|||
@Comment:	Expected error: E514 (Missing language code in @ID)
*CHI:	hello .
@End
