tests/error_corpus/parse_errors/E316_invalid_main_tier_syntax.cha
@Begin
@Languages:	eng
@Participants:	CHI Child
@ID:	eng|corpus|CHI|||||Child|||
@Comment:	ERROR: Invalid syntax in main tier (generic parse error)
@Comment:	Invalid: Unmatched bracket "[" without closing "]"
@Comment:	This tests generic syntax errors at utterance level
*CHI:	hello [ world .
@End
